force-app/main/default/objects/Choice__c/Choice__c.object-meta.xml
<CustomObject>
    <label>Choice</label>
    <nameField>
        <label>Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>