force-app/main/default/objects/Choice__c/fields/ElectionOrderUnique__c.field-meta.xml
<CustomField>
    <fullName>ElectionOrderUnique__c</fullName>
    <label>Election Order Unique</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>