force-app/main/default/objects/Choice__c/fields/PictureUrl__c.field-meta.xml
<CustomField>
    <fullName>PictureUrl__c</fullName>
    <label>Picture Url</label>
    <type>Url</type>
</CustomField>